--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/login.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/login.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}
-
-{% block head%}
-
-{% endblock %}
-{% block body %}
-  <div class="wrapper fadeInDown">
-    <div id="formContent">
-      <!-- Tabs Titles -->
-      <h2 class="active" style="color: #f6f6f6;"> Sign In </h2>
-      <!-- <h2 class="inactive underlineHover">Sign Up </h2> -->
-  
-      <!-- Icon -->
-      <div class="fadeIn first">
-        <!-- Icon tag here -->
-      </div>
-  
-      <!-- Login Form -->
-      <form action="/login" method="POST">
-        <input type="text" id="ID" class="fadeIn second" name="ID" placeholder="ID">
-        <input type="text" id="Password" class="fadeIn third" name="Password" placeholder="Password">
-        <input type="submit" class="fadeIn fourth" value="Log In">
-      </form>
-  
-      <!-- Remind Passowrd -->
-      <div id="formFooter">
-        <!-- <a class="underlineHover" href="#">Forgot Password?</a> -->
-      </div>
-  
-    </div>
-  </div>
-{% endblock %}
+<html>
+    <head>
+        <link rel="icon" href="Image/Icon.png">
+        <link rel="stylesheet" href="CSS/login-style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+        <title>Login Page</title>
+    </head>
+    <body>
+        <div class = "container">
+            <img src = "Image/logo-sekolah.png">
+            <form>
+                <label class="nip">NIP</label>
+                <input type="text" maxlength="16" name="nip"><br>
+                <label class="password">Kata Sandi</label>
+                <input type="password" name="password"><br>
+                <div class = "box-btn">
+                    <div class = "btn">
+                        <input id="submit-btn" type="submit" name="submit" value="Masuk" class="text"/>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </body>
+</html>
