--- a/Web/CSS/login-style.css
+++ b/Web/CSS/login-style.css
@@ -2,8 +2,8 @@ body{
     /* LOGIN-SCREEN */
 
     position: relative;
-    width: 1536px;
-    height: 722px;
+    width: 90%;
+    height: 90%;
 
     /* Fill color2 */
 
