--- a/Sistem Keuangan Daarul Jannah - Access Ver/static/main.css
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/static/main.css
@@ -1,209 +1,74 @@
-body{
-    /* LOGIN-SCREEN */
+/* Login Style */
 
-    position: relative;
-    /* Fill color2 */
-    min-width: 100px;
-    overflow: hidden;
-    background: #07361B;
+html,
+body {
+  height: 100%;
+  background-color: #07361b;
+  font-family: "Poppins", sans-serif !important;
 }
 
-.container{
-    /* login-container */
-
-    position: relative;
-    width: 418px;
-    height: 470px;
-    left: 559px;
-    top: 126px;
-
-    background: #FFFFFF;
-    /* soft shadow */
-
-    box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07), 0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275), 0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035), 0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725), 0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
-    border-radius: 20px;
-}
-.container img{
-    /* Logo-Sekolah*/
-    position: absolute;
-    width: 115px;
-    height: 115px;
-    left: calc(50% - 115px/2 + 0.5px);
-    top: 27px;
-
-    background: url(.png);
-    }
-
-
-.container form input[type="text"]{
-        /* Rectangle 3 */
-
-    position: absolute;
-    width: 286px;
-    height: 40px;
-    left: calc(50% - 286px/2 + 1px);
-    top: calc(50% - 40px/2 - 20px);
-
-    background: #FFFFFF;
-    /* outline1 */
-
-    border: 1px solid #D1D1D1;
-    box-sizing: border-box;
-    border-radius: 10px;
-}
-.container form input[type="password"]{
-    /* Kotak Password */
-
-    position: absolute;
-    width: 286px;
-    height: 40px;
-    left: calc(50% - 286px/2 + 1px);
-    top: calc(50% - 40px/2 + 64px);
-
-    background: #FFFFFF;
-    /* outline1 */
-
-    border: 1px solid #D1D1D1;
-    box-sizing: border-box;
-    border-radius: 10px;
-    }
-
-.container label{
-    text-align: left;
-    color: #000000;
-    line-height: 28px;
+.h1 {
+  size: 10px;
 }
 
-.container form button{
-    position: absolute;
-    width: 418px;
-    height: 78px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    clip: initial;
+.img {
+  /* Logo-Sekolah*/
+  position: relative;
+  width: 115px;
+  height: 115px;
+  left: calc(50% - 115px / 2 + 0.5px);
+  top: 0px;
 
-
-    /* outline1 */
-
-    border: 1px solid #056A31;
-    box-sizing: border-box;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-    box-shadow: 0 0 2px 0px #056A31 inset, 0 0 1px 0px #056A31;
-
-    background: #056A31;
-
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 18px;
-    letter-spacing: 0.1em;
-    /* identical to box height, or 129% */
-
-    text-align: center;
-    color:white
-    
+  background: url(.png);
 }
 
-.container form button:hover{
-    background-color: white;
-    border-color: #056A31;
-    color:#056A31
+.global-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #07361b;
 }
 
-
-
-.text{
-    /* Rectangle 1 */
-
-    position: absolute;
-    height: 78px;
-    left: 0%;
-    right: 0%;
-    bottom: -78px;
-
-    /* fill color1 */
-
-    background: #056A31;
-    transform: matrix(1, 0, 0, -1, 0, 0);
-    /* identical to box height, or 129% */
-
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.1em;
-
-    color: #FFFFFF;
-    }
-
-.nip{
-        /* NIP */
-
-    position: absolute;
-    width: 20px;
-    height: 18px;
-    left: calc(50% - 20px/2 - 132px);
-    top: calc(50% - 18px/2 - 54px);
-
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 18px;
-    /* identical to box height, or 150% */
-
-    display: flex;
-    align-items: center;
-
-    color: #000000;
+.login-form {
+  width: 380px;
+  height: 450px;
+  padding: 20px;
+  background-color: white !important;
+  border-radius: 20px !important;
+  box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07),
+    0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
+    0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
+    0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
+    0px 6.6501 px 5.32008px rgba(0, 0, 0, 0.0282725),
+    0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
 }
 
-.password{
-    /* Kata Sandi */
-
-    position: absolute;
-    width: 67px;
-    height: 18px;
-    left: calc(50% - 67px/2 - 108.5px);
-    top: calc(50% - 18px/2 + 30px);
-
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 18px;
-    /* identical to box height, or 150% */
-
-    display: flex;
-    align-items: center;
-
-    color: #000000;
+.form-floating{
+    top: 40px;
 }
 
-.footer{
-    position: fixed;
-    width: 1554px;
-    height: 49px;
-    left: -9px;
-    top: 673px;
+.btn {
+  background-color: #056a31 !important;
+  color: white !important;
+  transform: translateY(10px);
+  font-size: 14px;
+  border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important;
+  border-bottom-left-radius: 20px !important;
+  border-bottom-right-radius: 20px !important;
+
+  position: absolute;
+  width: 380px;
+  height: 15%;
+  left: -1px;
+  right: 0px;
+  bottom: 8px;
+  clip: initial;
+  font-weight: bold !important;
 }
 
-.footer{
-    position: fixed;
-    width: 287px;
-    height: 21px;
-    left: 9px;
-    top: 673px;
-    
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 21px;
-    /* identical to box height */ 
-    color: rgba(255, 255, 255, 0.22);
-    }
+.btn:hover {
+  background-color: rgba(13, 181, 18, 1) !important;
+  color: white;
+}
