--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='logo-sekolah.png') }}">
-    <title>Sistem Keuangan Daarul Jannah</title>
+    <title id="judul">Sistem Keuangan Daarul Jannah</title>
     {% block head%}
     {% endblock %}
 </head>
