--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/login.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/login.html
@@ -3,53 +3,48 @@
 <html>
     <head>
       {%block head%}
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-        <title>Login Page</title>
-      {%endblock%}
-    </head>
-    <body>
-      {%block body%}
-        <div class = "container">
-            <img src = "{{ url_for('static', filename='logo-sekolah.png') }}">
-            <form action="/login" method="POST">
-              <label class="nip">NIP</label>
-              <input type="text" maxlength="16" name="nip"><br>
-              <label class="password">Kata Sandi</label>
-              <input type="password" name="password">
-              <button type="submit">Masuk</button>
-            </form>
-        </div>
-        <div class = "footer">
-          <p>Copyright © 2021 Sekolah Daarul Jannah</p>
-      </div>
-      {%endblock%}
-    </body>
-</html>
-
-<!-- <html>
-  <head>
-      <link rel="icon" href="Image/Icon.png">
-      <link rel="stylesheet" href="CSS/login-style.css">
+      <!-- Bootstrap CSS -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
       <title>Login Page</title>
-  </head>
-  <body>
-      <div class = "container">
-          <img src = "Image/logo-sekolah.png">
-          <form action = "Page/Dashboard.html">
-              <label class="nip">NIP</label>
-              <input type="text" maxlength="16" name="nip"><br>
-              <label class="password">Kata Sandi</label>
-              <input type="password" name="password">
-              <button type="submit">Masuk</button>
+      <script>
+        document.getElementById('judul').innerHTML = "Login Page";
+      </script>
+      {%endblock%}
+    </head>
+    <body>
+      {%block body%}
+      {% if log_stat == "false":%}
+      <script>
+        alert("Wrong ID/Password")
+      </script>
+      {% endif %}
+      <div class="global-container">
+        <div class="card login-form">
+          <form action="/login" method="POST">
+            <div class="card-body">
+              <img src="{{ url_for('static', filename='logo-sekolah.png') }}" class = "img">
+            </div>
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInput" placeholder="Masukkan NIP" name="nip">
+                <label for="floatingInput">NIP</label>
+              </div>
+              <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+                <label for="floatingPassword">Kata Sandi</label>
+              </div>
+                <div class="d-grid gap-2">
+                  <button type="submit" class="btn">Masuk</button>
+              </div>
           </form>
+        </div>
       </div>
-      <div class = "footer">
-          <p>Copyright © 2021 Sekolah Daarul Jannah</p>
-      </div>
-  </body>
-</html> -->
+  
+      <!-- Option 1: Bootstrap Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      
+      {%endblock%}
+    </body>
+</html>
