--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/home.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/home.html
@@ -2,38 +2,55 @@
 {% extends 'base.html' %}
 
 {% block head%}
+  <title>Dashboard - Sistem Pembayaran DJ</title>
+
+  <script>
+    document.getElementById('judul').innerHTML = "Dashboard - Sistem Pembayaran DJ";
+  </script>
+
+  <!--Font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 {% endblock %}
 
 {% block body %}
-<div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/login">Logout</a>
-    {% if Otoritas == "admin":%}
-      <a href="/create_account">create account</a>
-    {% endif %}
-  </div>
-  <nav class="heading">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Sistem Keuangan Daarul Jannah - Home</span>
-  </nav>
-  
-  <script>
-  function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-  }
-  
-  function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-  }
-  
-  </script>
-<div class="content">
-  <a href="/pengecekan_pembayaran_siswa">
-    <svg width="400" height="110" id="rect">
-      <rect width="300" height="100" style="fill:#2c2c2c;stroke-width:3;stroke:rgb(0,0,0)"/>
-    </svg>
+  <!-- Image and text -->
+  <nav class="navbar navbar-light header">
+  <a class="navbar-brand">
+  <img src="{{ url_for('static', filename='logo-sekolah.png') }}" width="40" height="40" class="d-inline-block align-top" alt="">
   </a>
-  
-</div>
+  </nav>
+
+  <h1 class = "text-center h1">Sistem Cek Pembayaran<br>Sekolah Daarul Jannah</h1>
+
+  <div class="card mx-auto menu1 " style="width: 18rem;">
+  <a href="ubahdata.html">
+  <div class="card-body">
+  <img src="Image/fa-solid_user-edit.png" class="card-img-overlay">
+  <p class="card-text">Ubah Data<br>Siswa</p>
+  </div>
+  </a>
+  </div>
+
+  <div class="card mx-auto menu2" style="width: 18rem;">
+  <a href="cekpembayaran.html">
+  <div class="card-body">
+  <img src="Image/fa-solid_user-check.png" class="card-img-overlay">
+  <p class="card-text">Cek Pembayaran<br>Siswa</p>
+  </div>
+  </a>
+  </div>
+
+  <footer class="bg-light text-center text-lg-start footer">
+  <!-- Copyright -->
+  <div class="text-left p-3">
+  Copyright © 2021 Sekolah Daarul Jannah
+  </div>
+  </footer>
 {% endblock %}
 
