--- a/Sistem Keuangan Daarul Jannah - Access Ver/static/style.css
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/static/style.css
@@ -27,7 +27,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #07361b;
 }
 
 .login-form {
@@ -40,7 +39,7 @@ body {
     0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198),
     0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275),
     0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035),
-    0px 6.6501 px 5.32008px rgba(0, 0, 0, 0.0282725),
+    0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725),
     0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
 }
 
@@ -50,13 +49,13 @@ body {
 
 .btn {
   background-color: #056a31 !important;
-  color: white !important;
+  color: white;
   transform: translateY(10px);
   font-size: 14px;
-  border-top-left-radius: 0px !important;
-  border-top-right-radius: 0px !important;
-  border-bottom-left-radius: 20px !important;
-  border-bottom-right-radius: 20px !important;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 
   position: absolute;
   width: 380px;
@@ -65,7 +64,7 @@ body {
   right: 0px;
   bottom: 8px;
   clip: initial;
-  font-weight: bold !important;
+  font-weight: bold;
 }
 
 .btn:hover {
