--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/cek_pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/cek_pembayaran.html
@@ -2,42 +2,47 @@
 {% extends 'base.html' %}
 
 {% block head%}
+<title>Cek Pembayaran - Sistem Pembayaran DJ</title>
 
+<!--Font-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+<link rel="stylesheet" href="{{ url_for('static', filename='cek.css') }}">
 {% endblock %}
 
 {% block body %}
-<div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+<!-- Header -->
+<nav class="navbar navbar-light header">
+  <a class="navbar-brand">
+  <img src="{{ url_for('static', filename='logo-sekolah.png') }}" width="40" height="40" class="d-inline-block align-top" alt="">
+  </a>
+</nav>
+
+<h1 class = "text-center h1">Sistem Cek Pembayaran<br>Sekolah Daarul Jannah</h1>
+
+<!--Search Bar-->
+<div class="input-group mb-3 searchbar-pos mx-auto">
+  <span class="input-group-addon card shadow">
+      <img src="{{ url_for('static', filename='eva_search-fill.png') }}">
+  </span>
+  <!-- <form method="post" action="/pengecekan_pembayaran_siswa"> -->
+  <input type="text" class="form-control searchbar" placeholder="Ketik NIS atau Nama Siswa" aria-label="nis-siswa" aria-describedby="basic-addon2" id="nis">
+  <div class="input-group-append">
+    <button class="btn btn-success shadow" type="button">Cari</button>
   </div>
-  <nav class="heading">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Sistem Keuangan Daarul Jannah - Login</span>
-  </nav>
   
-  <script>
-  function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-  }
-  
-  function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-  }
-  </script>
-<div class="pengecekan_pembayaran_siswa">
-    <form action="/pengecekan_pembayaran_siswa" method="POST">
-    <pre>
-    <h2>Pengecekan Pembayaran Siswa</h2>
-    <br>
-    NIS
-    <input type="text" name="nis" id="nis" style="width: 400px; height: 25px;">
-    <br>
-    <input type="submit" value="Cek">
-    </pre>
-    </form>
-    
 </div>
+
+<!-- Footer -->
+<footer class="bg-light text-center text-lg-start footer">
+  <div class="text-left p-3">
+    Copyright © 2021 Sekolah Daarul Jannah
+  </div>
+</footer>
 {% endblock %}
 
