--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/login.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/login.html
@@ -8,6 +8,8 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
       <title>Login Page</title>
       <script>
         document.getElementById('judul').innerHTML = "Login Page";
