--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/home.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/home.html
@@ -5,7 +5,7 @@
   <title>Dashboard - Sistem Pembayaran DJ</title>
 
   <script>
-    document.getElementById('judul').innerHTML = "Dashboard - Sistem Pembayaran DJ";
+    document.getElementById('judul').innerHTML = "Dashboard";
   </script>
 
   <!--Font-->
