--- a/Web/CSS/ubahdata.css
+++ b/Web/CSS/ubahdata.css
@@ -5,7 +5,7 @@ html, body {
 
 .header{
     position: sticky;
-    background-color: #056A31;
+    background-color: 056A31;
 }
 
 .footer{
@@ -22,8 +22,8 @@ html, body {
 }
 
 .menu1{
-    top: 50px;
-    /*box Shadow */
+    width: 346px;
+    height: 106px;  
     background: #FFFFFF;
     /* outline1 */
 
@@ -35,47 +35,10 @@ html, body {
     border-radius: 15px;
 }
 
-.menu1 p{
-    font-weight: bold;
-    padding-left:90px;
+.card{
+    background-color: white;
 }
 
-.menu1 img{
-    padding-left:30px;
-}
-
-.menu2{
-    top: 70px;
-    /*box Shadow */
-    background: #FFFFFF;
-    /* outline1 */
-
-    border: 1px solid #CCCCCC;
-    box-sizing: border-box;
-    /* soft shadow */
-
-    box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07), 0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275), 0px 12.5216px 10.0172px rgba(0, 0, 0, 0.035), 0px 6.6501px 5.32008px rgba(0, 0, 0, 0.0282725), 0px 2.76726px 2.21381px rgba(0, 0, 0, 0.0196802);
-    border-radius: 15px;
-}
-
-.menu2 p{
-    font-weight: bold;
-    padding-left:90px;
-}
-
-.menu2 img{
-    padding-left:30px;
-}
-
-a{
-    color:black;
-    text-decoration:none;
-    transition: 0.1s;
-}
-
-a:hover{
-    color: #056A31;
-}
 
 .navbar{
     padding-top: 0rem !important;
@@ -123,3 +86,4 @@ a:hover{
     margin-left:10.5rem;
     margin-top: 1.15rem;
 }
+
