Coloring bug fixed

--- a/Sistem Keuangan Daarul Jannah - Access Ver/static/dashboard.css
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/static/dashboard.css
@@ -76,3 +76,50 @@ a{
 a:hover{
     color: #056A31;
 }
+
+.navbar{
+    padding-top: 0rem !important;
+    padding-bottom: 0rem !important;
+    height:75px !important;
+}
+
+.box-menu{
+        border: none;
+        background-color: #056A31 !important;
+        color: white;
+        padding: 18px 18px;
+        font-size: 16px;
+        cursor: pointer;
+
+}
+.user-box{
+    /* user-box */
+
+    position: flex;
+    width: 213px;
+    height: 75px;
+    left: 1323px;
+    top: 0px;
+
+    /* Fill color2 */
+
+    background: #07361B;
+}
+
+.nama{
+    color: white;
+    weight: bold;
+    text-align: right;
+    padding-right: 60px;
+    padding-top: 14px;
+}
+
+
+.fa-user-circle{
+    position: absolute;
+    color: white;
+    font-size: 38px;
+    display: inline-block;
+    margin-left:10.5rem;
+    margin-top: 1.15rem;
+}
