--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/cek_pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/cek_pembayaran.html
@@ -16,14 +16,22 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 <link rel="stylesheet" href="{{ url_for('static', filename='cek.css') }}">
+<script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block body %}
 <!-- Header -->
 <nav class="navbar navbar-light header">
-  <a class="navbar-brand">
-  <img src="{{ url_for('static', filename='logo-sekolah.png') }}" width="40" height="40" class="d-inline-block align-top" alt="">
+  <a>
+  <button class ="box-menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
+  <img src="{{ url_for('static', filename='logo-sekolah.png') }}" width="40" height="40" class="d-inline-block" alt="">
   </a>
+  <div class="user-box">
+      <i class="fas fa-user-circle id"></i>
+      <div class="id">
+          <p class = "nama">Ihza Fajrur RH<br>119140130</p>
+      </div>
+  </div>
 </nav>
 
 <h1 class = "text-center h1">Sistem Cek Pembayaran<br>Sekolah Daarul Jannah</h1>
