--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/ubahdata.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/ubahdata.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-{% extends 'base.html' %}
-{% block head%}
+<html>
     <head>
         <title>Dashboard - Sistem Pembayaran DJ</title>
         <!--Font-->
@@ -21,8 +19,7 @@
         <link rel="icon" type="image/png" href="Image/Icon1.png">
         <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
     </head>
-{% endblock %}
-{% block body %}
+
     <body>
         <!-- Header -->
         <nav class="navbar navbar-light header">
@@ -47,4 +44,4 @@
             </div>
         </footer>
     </body>
-{% endblock %}
+</html>
