--- a/Sistem Keuangan Daarul Jannah - Access Ver/templates/tabel-pembayaran.html
+++ b/Sistem Keuangan Daarul Jannah - Access Ver/templates/tabel-pembayaran.html
@@ -1,71 +1,84 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}
+{% extends 'base.html'%}
+<head>
+    {%block head%}
+    <title>Cek Pembayaran - Sistem Pembayaran DJ</title>
+    <script>
+        document.getElementById('judul').innerHTML = "Cek Pembayaran";
+    </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
-{% block head%}
-    <head>
-        <title>Dashboard - Sistem Pembayaran DJ</title>
-        <!--Font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- CSS Custom -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='tabel.css') }}">
+    <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
+    {% endblock %}
+</head>
 
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-        <!-- CSS Custom -->
-        <link rel="stylesheet" href="CSS/tabel.css">
-
-        <link rel="icon" type="image/png" href="Image/Icon1.png">
-        <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
-        
-    </head>
-{% endblock %}
-
-{% block body %}
-    <body>
-        <!-- Header -->
-        <nav class="navbar navbar-light header">
-            <a>
-            <button class ="box-menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
-            <img src="Image/logo-sekolah.png" width="40" height="40" class="d-inline-block" alt="">
-            </a>
-            <div class="user-box">
-                <i class="fas fa-user-circle id"></i>
-                <div class="id">
-                    <p class = "nama">Andy Rusman<br>018273282</p>
-                </div>
+<body>
+    {%block body%}
+    <!-- Header -->
+    <nav class="navbar navbar-light header">
+        <a>
+        <button class ="box-menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
+        <img src="{{ url_for('static', filename='logo-sekolah.png') }}" width="40" height="40" class="d-inline-block" alt="">
+        </a>
+        <div class="user-box">
+            <i class="fas fa-user-circle id"></i>
+            <div class="id">
+                <p class = "nama">Ihza Fajrur RH<br>119140130</p>
             </div>
-        </nav>
+        </div>
+    </nav>
 
-        <div class="heading">
-            <a href="dashboard.html" class="">
-                <i class="fas fa-chevron-left"></i>
-            </a>
-            <div class="head-pack">
-                <h1 class = "h1">Data Pembayaran Siswa/i Daarul Jannah</h1>
-                <h2>Sistem Cek Pembayaran Sekolah Daarul Jannah</h2>
+    <div class="heading">
+        <a href="/pengecekan_pembayaran_siswa" class="">
+            <i class="fas fa-chevron-left"></i>
+        </a>
+        <div class="head-pack">
+            <h1 class = "h1">Data Pembayaran Siswa/i Daarul Jannah</h1>
+            <h2>Sistem Cek Pembayaran Sekolah Daarul Jannah</h2>
+        </div>
+    </div>
+
+    <div class="data-container mx-auto">
+        <div class="siswa-group">
+            <div class="text">Data Siswa/i</div>
+            <div class="tabel-siswa">
+                <img src="{{ url_for('static', filename='1549425553128.png') }}" class="foto-siswa" alt="">
+                <div class="detail-siswa">
+                    {% for data_siswa in siswa %}
+                    <p><b>Nama     :</b> {{data_siswa.Nama}} </p>
+                    <p><b>Kelas    :</b> {{data_siswa.Kelas}}</p>
+                    <p><b>Kelamin  :</b> {{data_siswa.Kelamin}}</p>
+                    <p><b>Status   :</b> {{data_siswa.Status}}</p>
+                    <p><b>NIS      :</b> {{data_siswa.NIS}}</p>
+                    <p><b>NISN     :</b> {{data_siswa.NISN}}</p>
+                    {% endfor %}
+                </div>
+            </div>  
+        </div>
+
+        <div class="rincian-group">
+            <div class="text">Rincian Tagihan</div>
+            <div class="tabel-rincian">
+                <div class="detail-tagihan">
+                    <ul>
+                        {% for tagihan_siswa in tagihan %}
+                        <li><b>SPP {{tagihan_siswa.Tagihan_bulan}}/2021 : </b> Rp.{{tagihan_siswa.Jumlah_tagihan}},-</li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
         </div>
 
-        <div class="data-container mx-auto">
-            <div class="siswa-group">
-                <p>Data Siswa/i</p>
-                <div class="tabel-siswa">
-                </div>  
-            </div>
-
-            <p>Rincian Tagihan </p>
-            <div class="tabe-rincian">
-
-            </div>
-
-            <p>Histori Pembayaran Siswa/i</p>
-
-            <table class="tabel-histori mx-auto">
+        <div class="histori-group">
+            <div class="text text-histori">Riwayat Pembayaran Siswa/i</div>
+            <table  class="table table borderless tabel-histori mx-auto">
                 <th>Tanggal Pembayaran</th>
                 <th>SPP</th>
                 <th>Tabungan Wajib</th>
@@ -73,23 +86,34 @@
                 <th>Jemputan</th>
                 <th>Ekskul</th>
                 <th>Majelis Sekolah</th>
+                {% for data_pembayaran_spp in spp%}
+                <tr>
+                    <td>{{data_pembayaran_spp.Waktu_pembayaran}}</td>
+                    <td>Rp.{{data_pembayaran_spp.Pembayaran}},-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                {% endfor %}
             </table>
         </div>
+    </div>
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-        <footer class="bg-light text-center text-lg-start footer mt-auto">
-            <!-- Copyright -->
-            <div class="text-left p-3 mt-auto">
-              Copyright © 2021 Sekolah Daarul Jannah
-            </div>
-        </footer>
-    </body>
-{% endblock %}
+    <footer class="bg-light text-center text-lg-start footer mt-auto">
+        <div class="text-left p-3 mt-auto">
+            Copyright © 2021 Sekolah Daarul Jannah
+        </div>
+    </footer>
+    {%endblock%}
+</body>
