--- a/Sistem Keuangan Daarul Jannah/templates/login-page.html
+++ b/Sistem Keuangan Daarul Jannah/templates/login-page.html
@@ -36,7 +36,7 @@
               <label for="floatingPassword">Kata Sandi</label>
             </div>
             <div class="form-floating">
-              <label style="color: red;">{{ msg }}</label>
+              <p style="color: red;  font-size: small;">{{msg}}</p>
             </div>
             <div class="d-grid gap-2">
                 <button type="submit" class="btn">Masuk</button>
