--- a/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/tabelsiswa.html
@@ -5,7 +5,7 @@
         {% block head%}
             <title>Cek Pembayaran - Sistem Pembayaran DJ</title>
             <!-- CSS Custom -->
-            <link rel="stylesheet" href="{{ url_for('static', filename='CSS/tabelsiswa.css') }}">
+            <link rel="stylesheet" href="{{ url_for('static', filename='CSS/dashboard.css') }}">
         {% endblock %}
     </head>
 
