--- a/Sistem Keuangan Daarul Jannah/static/CSS/login.css
+++ b/Sistem Keuangan Daarul Jannah/static/CSS/login.css
@@ -27,7 +27,7 @@ body {
 
 .login-form {
   width: 380px;
-  height: 450px;
+  height: 420px;
   padding: 20px;
   background-color: white !important;
   border-radius: 20px !important;
@@ -40,7 +40,7 @@ body {
 }
 
 .form-floating {
-  top: 40px;
+  margin-top: 10px;
 }
 
 
