--- a/Sistem Keuangan Daarul Jannah/templates/base.html
+++ b/Sistem Keuangan Daarul Jannah/templates/base.html
@@ -13,7 +13,10 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='Image/Icon1.png') }}">
         <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
         {% block head%}
@@ -28,18 +31,36 @@
                 <li><a href="/manajemen_siswa"><i class="fa fa-users"></i>&nbsp;  Data Siswa/i</a></li>
             </ul>
         </nav>
+
         <div class="wrapper">
             <div class="section">
+
+                <div class="header">
+                    <div class="profil">
+                        <div class="wrap-profil-konten dropdown">
+                            <a class="konten-profil dropdown-toggle"data-toggle="dropdown">
+                                <div class="teks-profil">
+                                    <h5>{{session['nama']}}</h5>
+                                    <h6>{{session['nip']}}</h6>
+                                </div>
+                                <img src="{{ url_for('static', filename='Image/foto-siswa.png') }}" class="foto-profil">
+                            </a>
+                            <ul class="dropdown-menu" style="width:200px;padding:10px ">
+                              <li><a href="" class="disabled">Otoritas: {{session['otoritas']}}</a></li>
+                              <li><a href="/logout" class="logout-btn">logout</a></li>
+                            </ul>
+                          </div>
+                       
+                    </div>
+                    
+                </div>
+
                 {% block body %}
                 {% endblock %}
                 
-                <footer class="bg-light text-right text-lg-start footer">
-                    <!-- Copyright -->
-                    <div class="text-right p-3">
-                    Copyright © 2021 Sekolah Daarul Jannah
-                    </div>
-                </footer>
             </div>
+            
         </div>
+        
     </body>
 </html>
