--- a/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
+++ b/Sistem Keuangan Daarul Jannah/templates/datasiswa.html
@@ -1,30 +1,17 @@
+<!DOCTYPE html>
+{% extends 'base.html' %}
 <html>
     <head>
+        {% block head%}
         <title>Dashboard - Sistem Pembayaran DJ</title>
-        <!--Font-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
         <!-- CSS Custom -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='CSS/datasiswa.css') }}">
-
-        <link rel="icon" type="image/png" href="{{ url_for('static', filename='Image/Icon1.png') }}">
-        <script src="https://kit.fontawesome.com/07552a3127.js" crossorigin="anonymous"></script>
-        
+        <link rel="stylesheet" href="{{ url_for('static', filename='CSS/dashboard.css') }}">
+        {% endblock %}
     </head>
 
 <body>
     <!-- Sidebar -->
-    <div class="wrapper">
-        <div class="section">
+            {% block body %}
             <div class="box-area">
                 <div class="back-btn">
                     <div class="head-pack">
@@ -73,6 +60,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+            {% endblock %}
+
 </body>
